first thesis formats

--- a/lec_01.tex
+++ b/lec_01.tex
@@ -1,4 +1,6 @@
 %%% Introducción
+\newpage
+\pagestyle{title-subsection}
 \phantomsection
 \section*{Introducción}
 \markboth{Introducción}{Introducción}
@@ -46,7 +48,7 @@ Asimismo, Bell consideró la función \textit{unidad} (aquí llamada \emph{ident
 donde la suma se extiende sobre todos los pares de enteros $(d,\delta)$ tales que $d,\delta >0$ y $n = d \delta$, y llama a $f'(x)$ la \textit{recíproca} de $f(x)$, que aquí se le dará el nombre de \textit{inversa} de $f$.
 \bigskip
 
-El lector con conocimiento básico de álgebra abstracta puede comenzar a identificar lo que está sucediendo aquí. Hasta ahora, resulta que la función $\varepsilon$ está actuando como la identidad respecto a la operación de anterior, es decir, hasta ahora el conjunto de funciones aritméticas contituye un \emph{monoide}. ¿Será esta operación también asociativa o conmutativa? La repuesta a estas preguntas es afirmativa y más aún, con la operación de suma de funciones punto a punto, este conjunto forma un anillo conmutativo con identidad y resulta ser también un dominio entero y de factorización única. En el primer capítulo, el objetivo de este trabajo es presentar algunos resultados sobre la esctructura del anillo de funciones aritméticas en un contexto puramente algebraico, condensando y resumiendo los resultados probados en \cite{Ca1959}, \cite{Nish1} y \cite{Bell1}, en notación algebraica moderna. Después, se exponen varias isomorfismos entre los subgrupos del anillo de funciones aritméticas, aditivos y multiplicativos. Al final de este capítulo se presentan algunas funciones aritméticas conocidas y algunas relaciones entre ellas, derivadas fácilmente con los resultados probados en las secciones anteriores. (agregar varias relaciones entre funciones, algebráicas, tal vez una tabla).
+El lector con conocimiento básico de álgebra abstracta puede comenzar a identificar lo que está sucediendo aquí. Hasta ahora, resulta que la función $\varepsilon$ está actuando como la identidad respecto a la operación de anterior, es decir, hasta ahora el conjunto de funciones aritméticas contituye un \emph{monoide}. ¿Será esta operación también asociativa o conmutativa? La repuesta a estas preguntas es afirmativa y más aún, con la operación de suma de funciones punto a punto, este conjunto forma un anillo conmutativo con identidad y resulta ser también un dominio entero y de factorización única. En el primer capítulo, el objetivo de este trabajo es presentar algunos resultados sobre la esctructura del anillo de funciones aritméticas en un contexto puramente algebraico, condensando y resumiendo los resultados probados en \cite{Ca1959}, \cite{Nish1} y \cite{Bell1}. Después, se exponen varias isomorfismos entre los subgrupos del anillo de funciones aritméticas, aditivos y multiplicativos. Al final de este capítulo se presentan algunas funciones aritméticas conocidas y algunas relaciones entre ellas, derivadas fácilmente con los resultados probados en las secciones anteriores. (agregar varias relaciones entre funciones, algebráicas, tal vez una tabla).
 \bigskip
 
 El segundo capítulo se ocupa de presentar dos clases de funciones, llamadas funciones \emph{pares} y funciones \emph{periódicas}, y se probará que son equivalentes. Se presenta una teoría análoga a la teoría de Fourier del análisis real, usando únicamente propiedades de divisibilidad de los enteros. Además, se introducen las sumas de Ramanujan y algunas propiedades topológicas del espacio vectorial formado por las combinaciones lineales finitas de estas. Al final del capítulo se presenta un resultado relativo a la expasión finita de cualquier función aritmética con sumas de Ramanujan como coeficientes (y la unicidad de esta representación) (y también a la densidad de estas funciones en el conjunto de todas las funciones aritméticas). Los resultados presentados en este capítulo se pueden encontrar en \cite{Coh1}.
