--- a/lec_02.tex
+++ b/lec_02.tex
@@ -1,5 +1,6 @@
 %%% Estructura del anillo
 \newpage
+\pagenumbering{arabic}
 \section{Estructura del anillo de funciones aritméticas}
 
 \begin{definition}
