--- a/lec_06.tex
+++ b/lec_06.tex
@@ -296,3 +296,5 @@ Se puede calcular también su transformada discreta de Fourier usando la \cref{p
 \end{equation*}
 La gráfica de esta señal se muestra en la \Cref{fig:plot2}.
 \end{example}
+
+Agregar más ejemplos de señales pares y sus gráficas de transformada de Fourier. Agregar también el programa hecho en \texttt{C} para los cálculos. En el ejemplo anterior, calcular la transformada discreta con los métodos clásicos y ver que coindice.
