--- a/eof.tex
+++ b/eof.tex
@@ -3,4 +3,13 @@
 \nocite{*}
 \bibliography{bibliography}
 \bibliographystyle{acm}
+
+{
+\LARGE
+\color{lightgray}
+\begin{equation*}
+    e^{i\pi} + 1 = 0
+\end{equation*}
+}
+
 \end{document}
