--- a/lec_01.tex
+++ b/lec_01.tex
@@ -30,7 +30,8 @@ En particular, como $\sum \varphi(d) = n$, se tiene
 
 En 1874, F. Mertens notó que $\sum \mu(d) = 0$ si $n>1$, donde $d$ recorre todos los divisores positivos de $n$.
 N. V. Bugaiev (1888) consideró la función $\nu(x)$ con valor $\log p$ si $x$ es potencia de un primo $p$ y con valor 0 en otro caso. Si $d$ recorre todos los divisores positivos de $n$, $\sum \nu(d) = \log n$ implica que $\sum \mu(d) \log d = -\nu(n)$. Bugaiev llamó a $F(n) = \sum f(d)$, la integral numérica de $f(n)$, donde la suma es sobre todos los divisores positivos $d$ de $n$, y llamó a $f(n)$ la derivada numérica de la función $F(n)$ \cite{Di1}.
-\bigskip
+\newpage
+\thispagestyle{easter3}
 
 En 1857 Liouville estableció sin prueba un gran número de identidades interesantes similares a las anteriores, en sus cuatro artículos \emph{Sur quelques functions numeriques}, sobre funciones ariméticas específicas, como la suma y número de divisores de un entero, la función $\varphi$ de Euler, la función de Möbius $\mu$, su propia función $\lambda$, etc. Afirmó que estaba en posesión de un método general de extrema simplicidad, con el que tales identidades se podrían escribir a voluntad. Tales identidades provaron ser un valioso punto de partida para la evaluación asintótica de funciones aritméticas, pero su interés peculiar era más bien  de naturaleza algebráica \cite{Bell1}. 
 \bigskip
