--- a/lec_03.tex
+++ b/lec_03.tex
@@ -248,6 +248,7 @@ por el \Cref{lem:div1}.
 \bigskip
 
 Como ya se probó al inicio de esta demostración, si $f$ es multiplicativa entonces $f(1)=1$, por lo que existe $f^{-1}$. Veamos que $f^{-1} \in \mathcal{M}$. Para esto construiremos, a partir de $f$, una función multiplicativa $g$ con la propiedad de que $f*g=I$, con lo que quedará demostrado que $f^{-1}$ es multiplicativa por la unicidad de la inversa. Se procede definiendo a $g$ de forma gradual:
+
 \begin{enumerate}[label=\textnormal{(\arabic*)},ref=\textnormal{\arabic*}]
 \item $g(1)=1$.
 \item Para cada primo $p$ se define $g(p)=-f(p)$. De tal manera que
@@ -282,6 +283,8 @@ Como ya se probó al inicio de esta demostración, si $f$ es multiplicativa ento
 \item Se sigue que $g=f^{-1}$ y como $g$ es multiplicativa, entonces $f^{-1}$ también lo es.
 \end{enumerate}
 \end{proof}
+
+\thispagestyle{easter4}
 
 \begin{corollary}
 Si $f*g$ es multiplicativa y $g$ es multiplicativa, entonces $f$ también lo es.
