--- a/lec_05.tex
+++ b/lec_05.tex
@@ -42,6 +42,7 @@ donde
 \end{equation*}
 Estas sumas son conocidas como \textrm{sumas de Ramanujan}. El valor $c_r(n)$ es de hecho la suma de las $n$-ésimas potencias de las raíces primitivas de la unidad.
 
+\thispagestyle{easter1}
 \begin{proposition}
 Para toda $n \in \mathbb{N}$ se tiene que
 \begin{equation*}
