--- a/lec_06.tex
+++ b/lec_06.tex
@@ -223,6 +223,8 @@ para todo $n \in \mathbb{Z}$.
 Como ejemplo concreto, considere una señal $x$ arbitraria y simétrica módulo $r=10$. Por la \cref{prop:fou3}, $x$ puede tomar a lo sumo $d(10)=4$ valores y estos estarán agrupados en los sistemas de residuos de los divisores de $10$.
 \bigskip
 
+\thispagestyle{easter2}
+
 Específicamente, se tiene $S_1 = \{ 10 \}, S_2 = \{ 5 \}, S_5 = \{ 2, 4, 6, 8 \}, S_{10} = \{ 1, 3, 5, 7 \}$. Por tanto, $x[2]=x[4]=x[6]=x[8]$ y $x[1]=x[3]=x[5]=x[7]$. Luego los coeficientes $X[k]$, dados por \ref{prop:fou4}, son
 \begin{align*}
     X[1] = X[3] = X[5] = X[7] & = \sum_{d \mid 10} x \left[ \frac{10}{d} \right] c_d[1] = x[10] - x[5] - x[2] + x[1] \\
