--- a/lec_01.tex
+++ b/lec_01.tex
@@ -33,26 +33,26 @@ N. V. Bugaiev (1888) consideró la función $\nu(x)$ con valor $\log p$ si $x$ e
 \newpage
 \thispagestyle{easter3}
 
-En 1857 Liouville estableció sin prueba un gran número de identidades interesantes similares a las anteriores, en sus cuatro artículos \emph{Sur quelques functions numeriques}, sobre funciones ariméticas específicas, como la suma y número de divisores de un entero, la función $\varphi$ de Euler, la función de Möbius $\mu$, su propia función $\lambda$, etc. Afirmó que estaba en posesión de un método general de extrema simplicidad, con el que tales identidades se podrían escribir a voluntad. Tales identidades provaron ser un valioso punto de partida para la evaluación asintótica de funciones aritméticas, pero su interés peculiar era más bien  de naturaleza algebráica \cite{Bell1}. 
+En 1857 Liouville estableció sin prueba un gran número de identidades interesantes similares a las anteriores, en sus cuatro artículos \emph{Sur quelques functions numeriques}, sobre funciones ariméticas específicas, como la suma y número de divisores de un entero, la función $\varphi$ de Euler, la función de Möbius $\mu$, su propia función $\lambda$, etc. Afirmó que estaba en posesión de un método general de extrema simplicidad, con el que tales identidades se podrían escribir a voluntad. Tales identidades probaron ser un valioso punto de partida para la evaluación asintótica de funciones aritméticas, pero su interés peculiar era más bien  de naturaleza algebráica \cite{Bell1}. 
 \bigskip
 
 En 1911, al buscar pruebas para las fórmulas de Liouville, E. T. Bell construyó un método general con las características deseadas y lo extendió a otros campos además de los números racionales. Aunque Bell tenía intenciones de publicar su teoría completa en 1915, no fue sino hasta 1927 que una introducción desde un punto de vista lógico fue publicada en \cite{Bell2}. En lo concerniente a los \textit{enteros racionales}, terminología de la época para referirse a los números enteros, en 1912 y 1915 \cite{Bell1}, probó el teorema de inversión de Möbius, el cuál es un análogo a la inversión de series de Möbius en un contexto puramente aritmético y lo aplicó a numerosos ejemplos.
 \bigskip
 
-Bell (1928), llamó a una función $f(x)$ \emph{función numérica} si $f(1) \ne 0$ y $f(x)$ está definida para todo entero mayor que cero. El lector que recorra este trabajo podrá darse cuenta de que esta definición coincide con la de una función aritmética \emph{invertible} (\textsf{citar definición}). También llamó a una función \emph{factorizable} a una función numérica $g(x)$ tal que $g(1)=1$ y $g(m n)=g(m)g(n)$ para todos los pares $(m,n)$ de primos relativos positivos, que en este trabajo serán referidas como \emph{funciones multiplicativas}.
+Bell (1928), llamó a una función $f(x)$ \emph{función numérica} si $f(1) \ne 0$ y $f(x)$ está definida para todo entero mayor que cero. El lector que recorra este trabajo podrá darse cuenta de que esta definición coincide con la de una función aritmética \emph{invertible}, (\cref{prop:str1}). También llamó a una función \emph{factorizable} a una función numérica $g(x)$ tal que $g(1)=1$ y $g(m n)=g(m)g(n)$ para todos los pares $(m,n)$ de primos relativos positivos, que en este trabajo serán referidas como \emph{funciones multiplicativas} (\cref{def:mul1}).
 \bigskip
 
-Asimismo, Bell consideró la función \textit{unidad} (aquí llamada \emph{identidad}) $\varepsilon(x)$ definida como $\varepsilon(1)=1$ y $\varepsilon(n)=0$ para cada $n>1$ y probó que para cualquier función numérica existe otra función numérica tal que
+Asimismo, Bell consideró la función \textit{unidad}, aquí llamada \emph{identidad} (\cref{def:str2}), $\varepsilon(x)$ definida como $\varepsilon(1)=1$ y $\varepsilon(n)=0$ para cada $n>1$ y probó que para cualquier función numérica $f$ existe otra función numérica $f'$ tal que
 \begin{equation*}
     \sum f(d) f'(d) = \varepsilon(n) \tag{$n=1,2,3,\ldots$},
 \end{equation*}
-donde la suma se extiende sobre todos los pares de enteros $(d,\delta)$ tales que $d,\delta >0$ y $n = d \delta$, y llama a $f'(x)$ la \textit{recíproca} de $f(x)$, que aquí se le dará el nombre de \textit{inversa} de $f$.
+donde la suma se extiende sobre todos los pares de enteros $(d,\delta)$ tales que $d,\delta >0$ y $n = d \delta$, y llama a $f'(x)$ la \textit{recíproca} de $f(x)$.
 \bigskip
 
-El lector con conocimiento básico de álgebra abstracta puede comenzar a identificar lo que está sucediendo aquí. Hasta ahora, resulta que la función $\varepsilon$ está actuando como la identidad respecto a la operación de anterior, es decir, hasta ahora el conjunto de funciones aritméticas contituye un \emph{monoide}. ¿Será esta operación también asociativa o conmutativa? La repuesta a estas preguntas es afirmativa y más aún, con la operación de suma de funciones punto a punto, este conjunto forma un anillo conmutativo con identidad y resulta ser también un dominio entero y de factorización única. En el primer capítulo, el objetivo de este trabajo es presentar algunos resultados sobre la esctructura del anillo de funciones aritméticas en un contexto puramente algebraico, condensando y resumiendo los resultados probados en \cite{Ca1959}, \cite{Nish1} y \cite{Bell1}. Después, se exponen varias isomorfismos entre los subgrupos del anillo de funciones aritméticas, aditivos y multiplicativos. Al final de este capítulo se presentan algunas funciones aritméticas conocidas y algunas relaciones entre ellas, derivadas fácilmente con los resultados probados en las secciones anteriores. (agregar varias relaciones entre funciones, algebráicas, tal vez una tabla).
+El lector con conocimiento básico de álgebra abstracta puede comenzar a identificar lo que está sucediendo aquí. La función $\varepsilon$ está actuando como la identidad respecto a la operación de anterior, es decir, hasta ahora el conjunto de funciones aritméticas contituye un monoide. ¿Será esta operación también asociativa o conmutativa? La repuesta a estas preguntas es afirmativa y más aún, con la operación de suma de funciones punto a punto, este conjunto forma un anillo conmutativo con identidad. Y lo que es más, resulta ser también un dominio entero y de factorización única. En el primer capítulo, el objetivo de este trabajo es presentar algunos resultados sobre la esctructura del anillo de funciones aritméticas en el lenguage del álgebra abstracta y se pueden encontrar en \cite{Ca1959, Nish1, Bell1}. Después, se exponen varios isomorfismos entre los subgrupos del anillo de funciones aritméticas, aditivos y multiplicativos, entre ellos el subgrupo de funciones multiplicativas y el de funciones aritméticas real-valuadas. Al final de este capítulo se presentan algunas funciones aritméticas conocidas y algunas relaciones entre ellas, derivadas fácilmente con los resultados probados en las secciones anteriores y estos resultados están en \cite{Rea1}.
 \bigskip
 
-El segundo capítulo se ocupa de presentar dos clases de funciones, llamadas funciones \emph{pares} y funciones \emph{periódicas}, y se probará que son equivalentes. Se presenta una teoría análoga a la teoría de Fourier del análisis real, usando únicamente propiedades de divisibilidad de los enteros. Además, se introducen las sumas de Ramanujan y algunas propiedades topológicas del espacio vectorial formado por las combinaciones lineales finitas de estas. Al final del capítulo se presenta un resultado relativo a la expasión finita de cualquier función aritmética con sumas de Ramanujan como coeficientes (y la unicidad de esta representación) (y también a la densidad de estas funciones en el conjunto de todas las funciones aritméticas). Los resultados presentados en este capítulo se pueden encontrar en \cite{Coh1}.
+En el segundo capítulo se presentan dos clases de funciones, las funciones aritméticas \emph{periódicas}, en el sentido usual de periodicidad, y las funciones \emph{pares}, una subclase muy especial de las funciones periódicas y son tales que $f(n)=f((n,r)), \forall n \in \mathbb{N}$, donde $r \in \mathbb{N}$ es fijo y $(n,r)$ es el máximo común divisor de $n$ y $r$. Se introducen las sumas de Ramanujan como funciones pares y se presenta una teoría análoga a la teoría de Fourier del análisis real que recae únicamente en las propiedades de divisibilidad de los enteros. Específicamente, se prueba que toda función par tiene una expansión de Fourier finita con sumas de Ramanujan como coeficientes y se prueba que ésta representación puede ser derivada de un producto interno en el espacio de funciones aritméticas pares. Los resultados presentados en este capítulo se pueden encontrar en \cite{Coh1, Knopf1, Knopf2, Murty1}.
 \bigskip
 
-En el último capítulo se presenta una aplicación de los resultados expuestos en el segundo capítulo, usándolos para el procesamiento discreto de señales, haciendo énfasis en la simplicidad de los cálculos realizados.
+En el último capítulo se presenta una aplicación de los resultados expuestos en el segundo capítulo. Se presentan las señales \textit{simétricas}, que son funciones $x : \mathbb{Z} \longrightarrow \mathbb{C}$ tales que $x(n) = x(r-n), \forall n \in \mathbb{Z}$ y $r \in \mathbb{N}$ fijo y una subclase de éstas señales, las señales \textit{pares}, que son una extensión de las funciones aritméticas pares a $\mathbb{Z}$. Se prueba que la Transformada Discreta de Fourier de una señal par se puede calcular usando las sumas de Ramanujan. Estos resultados se pueden consultar en \cite{Prand1, Sam1}.
