--- a/lec_02.tex
+++ b/lec_02.tex
@@ -97,8 +97,8 @@ Se sigue de la definición de $(f*g)(n)$ y del \Cref{lemma:div1}.
 \end{proof}
 \end{proposition}
 
-\begin{definition}[Función identidad]
-Definimos a la función identidad $I$ como 
+\begin{definition}[Función identidad]\label{def:str2}
+Definimos a la función identidad $I$ como
 \begin{equation*}
 	I(n) =
 		\begin{cases}
