--- a/main.tex
+++ b/main.tex
@@ -89,8 +89,8 @@
 \phantomsection
 \markboth{Dedicatoria}{Dedicatoria}
 \addcontentsline{toc}{section}{Dedicatoria}
-\thispagestyle{plain}
-\
+\thispagestyle{empty}
+\hfill\textit{A mis padres, Adriana y Antonio.}
 \newpage
 \thispagestyle{empty}
 \
@@ -101,7 +101,15 @@
 \markboth{Agradecimientos}{Agradecimientos}
 \addcontentsline{toc}{section}{Agradecimientos}
 \thispagestyle{plain}
-\
+\section*{Agradecimientos}
+
+Necesito agradecer a mis padres, quienes en su infinita paciencia vieron como se gestó este trabajo de inicio a fin, con la incertidumbre de si se terminaría algún día. No es necesario mencionar que sin su apoyo económico y emocional este trabajo no existiría.
+\bigskip
+
+Debo darle las gracias también a mi asesor, el Dr. Pablo Lam, por su atención incodicional durante toda la realización de este trabajo y su firme convicción en que se podría terminar de forma satisfactoria, sin mencionar la gran ayuda y orientación sobre todos los detalles técnicos y burocráticos necesarios para iniciar y terminar esta tesis. No está de más agradecer a la Dra. Myriam Maldonado, al Dr. César Escobar, al M. en C. Andrés Sabino y al Dr. David Bretón por tomarse la molestia de leer este trabajo y ayudarme a mejorarlo. A final de cuentas, un trabajo siempre es incompleto si no incluye enfoques, observaciones y puntos de vista diferentes al de uno. Cualquier error que se encuentre en este trabajo recae únicamente sobre mi.
+\bigskip
+
+Finalmente, siento una inmensa gratitud a la ESFM, o lo que es lo mismo, a todos los profesores que me formaron como matemático en este centro de estudios. De principio a fin me sentí fascinado por los enigmáticos conocimientos que se nos presentaban, y no hubo profesor del que no aprendiera algo maravilloso. Los temas que elegí para discutir aquí están en gran parte influenciados por mis más tiernos inicios al entrar a esta escuela, particularmente por la unidad de álgebra I, a cuyos contenidos volví para desarrollar gran parte de la tesis. En mi opinión, esto prueba que la formación que esta escuela ofrece es de carácter universal y fundamental, abriéndole las puertas a todos sus alumnos para profundizar en cualquier rama de las matemáticas que deseen.
 \newpage
 \thispagestyle{empty}
 \
